Added Frying pan, Greatsword, Durasteel